[fix] text wraping on education year

--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ header .header-container .nav-list .theme-button:hover{
 .education-degree-duration h2:nth-child(2){
     font-weight: 300;
     font-size: 1.8rem;
-    width: 20%;
+    width: 35%;
     display: flex;
     justify-content: end;
 }
